--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,19 @@ jobs:
 
     - name: Deploy to EC2
       run: |
-        ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-          cd ~/apmc-scraper-project
+        ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          cd ~/CommodiAI-
           git pull origin main
           source venv/bin/activate
           pip install -r agri-data-website/requirements.txt
           sudo systemctl restart apmc-web
-    - name: Test SSH Connection
-      run: |
-          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo Hello from EC2"
-            EOF
+
+
+    - name: Notify Deployment Success
+      if: success()
+      run: echo "Deployment to EC2 completed successfully!"
+
+    - name: Notify Deployment Failure
+      if: failure()
+      run: echo "Deployment to EC2 failed!"
+        EOF
