--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -23,8 +23,9 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             set -e  # Exit if any command fails
-            cd ~/CommodiAI-/agri-data-website/
-            source ../venv/bin/activate
-            python scraper.py
+            cd ~/CommodiAI-/scraper
+            git pull origin main
+            source venv/bin/activate  
+            python APMC_scraper.py
             echo "✅ Scraper ran successfully at $(date)"
           EOF
