--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -26,6 +26,8 @@ jobs:
             cd ~/CommodiAI-/scraper
             git pull origin main
             source venv/bin/activate  
+            pip install -r requirements.txt
+            playwright install
             python APMC_scraper.py
             echo "✅ Scraper ran successfully at $(date)"
           EOF
