--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
           cd ~/CommodiAI-
           git pull origin main
-          source venv/bin/activate
+          source ../venv/bin/activate
           pip install -r agri-data-website/requirements.txt
           sudo systemctl restart apmc-web
 
