--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -24,9 +24,10 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             set -e  # Exit if any command fails
             cd ~/CommodiAI-/scraper
+            cd ~/CommodiAI-/scraper
+            rm -f .git/refs/remotes/origin/main.lock
+            git remote prune origin
             git fetch --prune
-            rm -f .git/refs/remotes/origin/main
-            git fetch origin
             git pull origin main
             source ../venv/bin/activate
             pip install -r requirements.txt
