--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -18,6 +18,10 @@ jobs:
           echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+      - name: Install Playwright dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libasound2t64
 
       - name: Run scraper.py on EC2
         run: |
