--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -22,6 +22,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libasound2t64
+          if command -v npx >/dev/null 2>&1; then
+            sudo npx playwright install-deps
+          else
+            sudo apt install -y libatk1.0-0 libatk-bridge2.0-0 libcups2 libatspi2.0-0 \
+              libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libcairo2 \
+              libpango-1.0-0 libasound2
+          fi
 
       - name: Run scraper.py on EC2
         run: |
