--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -14,35 +14,56 @@ jobs:
     steps:
       - name: Setup SSH
         run: |
+          echo "[INFO] Creating SSH directory..."
           mkdir -p ~/.ssh
+          echo "[INFO] Adding EC2 SSH key..."
           echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+          echo "[INFO] Adding EC2 host to known_hosts..."
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
       - name: Install Playwright dependencies
         run: |
+          echo "[INFO] Updating apt-get..."
           sudo apt-get update
-          sudo apt-get install -y libasound2t64
+          echo "[INFO] Installing Playwright dependencies for Ubuntu 24.04+..."
+          sudo apt-get install -y \
+            libasound2t64 libatk1.0-0t64 libatk-bridge2.0-0t64 libatspi2.0-0t64 \
+            libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1
           if command -v npx >/dev/null 2>&1; then
+            echo "[INFO] npx found! Installing Playwright dependencies with npx..."
             sudo npx playwright install-deps
           else
-            sudo apt install -y libatk1.0-0 libatk-bridge2.0-0 libcups2 libatspi2.0-0 \
+            echo "[WARN] npx not found. Installing fallback dependencies..."
+            sudo apt-get install -y libatk1.0-0 libatk-bridge2.0-0 libcups2 libatspi2.0-0 \
               libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libcairo2 \
               libpango-1.0-0 libasound2
           fi
 
       - name: Run scraper.py on EC2
         run: |
+          echo "[INFO] Connecting to EC2 and running scraper..."
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            set -e  # Exit if any command fails
+            echo "[EC2] Changing to scraper directory..."
             cd ~/CommodiAI-/scraper
-            cd ~/CommodiAI-/scraper
+
+            echo "[EC2] Cleaning up git locks and syncing repo..."
             rm -f .git/refs/remotes/origin/main.lock
             git remote prune origin
             git fetch --prune
             git pull origin main
+
+            echo "[EC2] Activating Python virtual environment..."
             source ../venv/bin/activate
+
+            echo "[EC2] Installing Python requirements..."
             pip install -r requirements.txt
+
+            echo "[EC2] Installing Playwright browsers..."
             playwright install
+
+            echo "[EC2] Running the APMC Scraper..."
             python APMC_Scraper.py
-            echo "✅ Scraper ran successfully at $(date)"
+
+            echo "✅ [EC2] Scraper ran successfully at $(date)"
           EOF
